--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,11 +1,9 @@
 <h2>Users</h2>
 <!-- [] is the property of the DOM element or component you want to bind to. -->
  <!-- [ngClass] apply classes based on certain conditions -->
-<<<<<<< HEAD
+
 <button class="btn btn-block mt-4 mb-4" [disabled]="!enableAdd" [ngClass]="currentClasses">Add New User</button>
-=======
-<button class="btn btn-block mb-2" [disabled]="!enableAdd" [ngClass]="currentClasses">Add New User</button>
->>>>>>> 2df32bd0f9bd5810094111a37c942495baae680c
+
 <!-- defining a template for if this is false called as noUsers -->
 <!-- <ul *ngIf="users.length >0;else noUsers"> -->
 
@@ -23,23 +21,20 @@
                 <!-- <img *ngIf="user.image" class="img-fluid" bind-src="user.image" alt=""> -->
             </div>
             <div class="col-sm-8">
-<<<<<<< HEAD
-                <h3 [ngStyle]="currentStyles">{{user.firstname}} {{user.lastName}}</h3>
-=======
+
+                <!-- <h3 [ngStyle]="currentStyles">{{user.firstname}} {{user.lastName}}</h3> -->
+
                 <h3 [ngStyle]="currentStyles">{{user.firstname | uppercase}} {{user.lastName | lowercase}}</h3>
->>>>>>> 2df32bd0f9bd5810094111a37c942495baae680c
+
                 <ul *ngIf="showExtended && user.age && user.address">
                     <!-- <li>{{age}}</li> -->
                     <li class="list-group-item">Age: {{user.age}}</li>
                     <li class="list-group-item">Address: {{user.address.street}}{{user.address.city}}, {{user.address.state}}</li>
-<<<<<<< HEAD
+
                     <li class="list-group-item">Balance: {{user.balance | currency:'INR':"symbol"}} until {{.5 | percent}}</li>
                     <li class="list-group-item">Joined on: {{user.registered | date :"fullDate"}}</li>
                     <li class="list-group-item">{{5 | number:"2.3"}}</li>
-=======
-                    <li class="list-group-item">Balance: {{user.balance}}</li>
-                    <li class="list-group-item">Registered on: {{user.registered}}</li>
->>>>>>> 2df32bd0f9bd5810094111a37c942495baae680c
+
                 </ul>
             </div>
         </div>
