--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,48 +1,25 @@
 <h2>Users</h2>
 <!-- [] is the property of the DOM element or component you want to bind to. -->
- <!-- [ngClass] apply classes based on certain conditions -->
-
-<button class="btn btn-block mt-4 mb-4" [disabled]="!enableAdd" [ngClass]="currentClasses">Add New User</button>
+<button class="btn btn-block mt-4 mb-4" [disabled]="!enableAdd" >Add New User</button>
 
 <!-- defining a template for if this is false called as noUsers -->
 <!-- <ul *ngIf="users.length >0;else noUsers"> -->
 
-    <!-- so when users are being loaded or before they are loaded 'users' does not exist,
-     so here we can add a '?' for its okay if it doesnot exist -->
 <ul class="list-unstyled" *ngIf="loaded && users?.length">
-    <!-- for each one We want an variable c/a user -->
-    <li class="card card-body mb-3" *ngFor=" let user of users " [class.bg-light]="user.isActive" [style.border-color]=" user.isActive? 'green': ''">
+    <li class="card card-body mb-3" *ngFor=" let user of users " [class.bg-light]="user.isActive">
 
-        <div class="row">
-            <div class="col-sm-4">
-                <!-- <img *ngIf="user.image" class="img-fluid" src=""> -->
-                 <img [src]="user.image" alt="profile_img">
-                <!-- <img *ngIf="user.image" class="img-fluid" src="{{user.image}}" alt=""> -->
-                <!-- <img *ngIf="user.image" class="img-fluid" bind-src="user.image" alt=""> -->
-            </div>
-            <div class="col-sm-8">
 
-                <!-- <h3 [ngStyle]="currentStyles">{{user.firstname}} {{user.lastName}}</h3> -->
-
-                <h3 [ngStyle]="currentStyles">{{user.firstname | uppercase}} {{user.lastName | lowercase}}</h3>
+                <h3>{{user.firstname}} {{user.lastName}}</h3>
 
                 <ul *ngIf="showExtended && user.age && user.address">
                     <!-- <li>{{age}}</li> -->
                     <li class="list-group-item">Age: {{user.age}}</li>
                     <li class="list-group-item">Address: {{user.address.street}}{{user.address.city}}, {{user.address.state}}</li>
-
-                    <li class="list-group-item">Balance: {{user.balance | currency:'INR':"symbol"}} until {{.5 | percent}}</li>
                     <li class="list-group-item">Joined on: {{user.registered | date :"fullDate"}}</li>
-                    <li class="list-group-item">{{5 | number:"2.3"}}</li>
 
                 </ul>
-            </div>
-        </div>
     </li>
 </ul> 
-
-<!-- <ng-template #noUsers> <h4>No Users Found!</h4> </ng-template> -->
-
 <h4 *ngIf="users?.length==0">No Users Found.</h4>
 <!-- can add some spinners -->
 <h4 *ngIf="!loaded">Loading Users...</h4>
