--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -9,9 +9,9 @@
     <li class="card card-body mb-3" *ngFor=" let user of users " [class.bg-light]="user.isActive">
 
 
-                <h3>{{user.firstname}} {{user.lastName}}</h3>
+                <h3>{{user.firstname}} {{user.lastName}} <small *ngIf="user.age && user.address"><button class="btn btn-dark btn-sm" (click)="toggleHide(user)"><i [ngClass]="user.hide ? 'fa fa-plus' : 'fa fa-minus'" class="fa fa-plus"></i></button></small> </h3>
 
-                <ul *ngIf="showExtended && user.age && user.address">
+                <ul class="list-group" *ngIf="!user.hide && user.age && user.address">
                     <li class="list-group-item">Age: {{user.age}}</li>
                     <li class="list-group-item">Address: {{user.address.street}}{{user.address.city}}, {{user.address.state}}</li>
                     <li class="list-group-item">Joined on: {{user.registered | date :"fullDate"}}</li>
