--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -4,29 +4,29 @@
     <form (submit)="onSubmit($event)">
         <div class="form-group">
             <label>First Name :</label>
-            <input (keydown)="fireEvent($event)" type="text" class="form-control" name="firstName">
+            <input [(ngModel)]="user.firstname" type="text" class="form-control" name="firstName">
         </div>
         <div class="form-group">
             <label>Last Name :</label>
-            <input type="text" class="form-control" name="lasstName">
+            <input [(ngModel)]="user.lastName" type="text" class="form-control" name="lasstName">
         </div>
         <div class="form-group">
             <label>Age :</label>
-            <input type="number" class="form-control" name="age">
+            <input [(ngModel)]="user.age" type="number" class="form-control" name="age">
         </div>
-        <div class="form-group">
+        <!-- <div class="form-group">
             <label>Street Address :</label>
-            <input type="text" class="form-control" name="street">
+            <input [(ngModel)]="user.address.street" type="text" class="form-control" name="street">
         </div>
         <div class="form-group">
             <label>City :</label>
-            <input type="text" class="form-control" name="city">
+            <input [(ngModel)]="user.address.city" type="text" class="form-control" name="city">
         </div>
         <div class="form-group">
             <label>State :</label>
-            <input type="text" class="form-control" name="state">
-        </div>
-        <button (click)="addUser({firstname:'Mary', lastName:'Jackson', isActive:true})" class="btn btn-block mt-4 mb-4" [disabled]="!enableAdd" >Add New User</button>
+            <input [(ngModel)]="user.address.state" type="text" class="form-control" name="state">
+        </div> -->
+        <button (click)="addUser()" class="btn btn-block mt-4 mb-4" [disabled]="user.firstname == ''|| user.lastName == ''" >Add New User</button>
     </form>
 </div>
 
