--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -11,22 +11,10 @@
             <input [(ngModel)]="user.lastName" type="text" class="form-control" name="lasstName">
         </div>
         <div class="form-group">
-            <label>Age :</label>
-            <input [(ngModel)]="user.age" type="number" class="form-control" name="age">
+            <label>Email :</label>
+            <input [(ngModel)]="user.email" type="text" class="form-control" name="email">
         </div>
-        <!-- <div class="form-group">
-            <label>Street Address :</label>
-            <input [(ngModel)]="user.address.street" type="text" class="form-control" name="street">
-        </div>
-        <div class="form-group">
-            <label>City :</label>
-            <input [(ngModel)]="user.address.city" type="text" class="form-control" name="city">
-        </div>
-        <div class="form-group">
-            <label>State :</label>
-            <input [(ngModel)]="user.address.state" type="text" class="form-control" name="state">
-        </div> -->
-        <button (click)="addUser()" class="btn btn-block mt-4 mb-4" [disabled]="user.firstname == ''|| user.lastName == ''" >Add New User</button>
+        <button class="btn btn-block mt-4 mb-4" [disabled]="user.firstname == ''|| user.lastName == ''" >Add New User</button>
     </form>
 </div>
 
@@ -41,11 +29,10 @@
     <li class="card card-body mb-3" *ngFor=" let user of users " [class.bg-light]="user.isActive">
 
 
-                <h3>{{user.firstname}} {{user.lastName}} <small *ngIf="user.age && user.address"><button class="btn btn-dark btn-sm" (click)="toggleHide(user)"><i [ngClass]="user.hide ? 'fa fa-plus' : 'fa fa-minus'" class="fa fa-plus"></i></button></small> </h3>
+                <h3>{{user.firstname}} {{user.lastName}} <small><button class="btn btn-dark btn-sm" (click)="toggleHide(user)"><i [ngClass]="user.hide ? 'fa fa-plus' : 'fa fa-minus'" class="fa fa-plus"></i></button></small> </h3>
 
-                <ul class="list-group" *ngIf="!user.hide && user.age && user.address">
-                    <li class="list-group-item">Age: {{user.age}}</li>
-                    <li class="list-group-item">Address: {{user.address.street}}{{user.address.city}}, {{user.address.state}}</li>
+                <ul class="list-group" *ngIf="!user.hide">
+                    <li class="list-group-item">Email: {{user.email}}</li>
                     <li class="list-group-item">Joined on: {{user.registered | date :"fullDate"}}</li>
 
                 </ul>
