--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,20 +1,66 @@
 <button class="btn btn-dark  mb-3" (click)="showUserForm=!showUserForm">Add User</button>
 <div *ngIf="showUserForm">
     <h2>Add User</h2>
-    <form (submit)="onSubmit($event)">
+    <form #userForm="ngForm" (ngSubmit)="onSubmit(userForm)">
         <div class="form-group">
             <label>First Name :</label>
-            <input [(ngModel)]="user.firstname" type="text" class="form-control" name="firstName">
+            <input 
+            [(ngModel)]="user.firstname" 
+            [ngClass]="{'is-invalid':userFirstName.errors && userFirstName.touched}"
+            type="text" 
+            class="form-control" 
+            name="firstName"
+            #userFirstName="ngModel"
+            required
+            minlength="2">
+            <!-- elvis operator -->
+            <div [hidden]="!userFirstName.errors?.['required']" 
+            class="invalid-feedback">
+                First name required
+            </div>
+            <div [hidden]="!userFirstName.errors?.['minlength']" class="invalid-feedback">
+                must have atleast 2 characters
+            </div>
         </div>
-        <div class="form-group">
-            <label>Last Name :</label>
-            <input [(ngModel)]="user.lastName" type="text" class="form-control" name="lasstName">
-        </div>
+        <label>Last Name :</label>
+        <input 
+            [(ngModel)]="user.lastName" 
+            [ngClass]="{'is-invalid':userLastName.errors && userLastName.touched}"
+            type="text" 
+            class="form-control" 
+            name="lastName"
+            #userLastName="ngModel"
+            required
+            minlength="2">
+            <!-- elvis operator -->
+            <div [hidden]="!userLastName.errors?.['required']" 
+            class="invalid-feedback">
+                First name required
+            </div>
+            <div [hidden]="!userLastName.errors?.['minlength']" class="invalid-feedback">
+                must have atleast 2 characters
+            </div>
         <div class="form-group">
             <label>Email :</label>
-            <input [(ngModel)]="user.email" type="text" class="form-control" name="email">
+            <input 
+            [(ngModel)]="user.email" 
+            [ngClass]="{'is-invalid':userEmail.errors && userEmail.touched}"
+            type="email" 
+            class="form-control" 
+            name="userEmail"
+            #userEmail="ngModel"
+            required
+            pattern="[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?">
+            <!-- elvis operator -->
+            <div [hidden]="!userEmail.errors?.['required']"
+            class="invalid-feedback">
+                Email is required
+            </div>
+            <div [hidden]="!userEmail.errors?.['pattern']" class="invalid-feedback">
+                email is not valid
+            </div>
         </div>
-        <button class="btn btn-block mt-4 mb-4" [disabled]="user.firstname == ''|| user.lastName == ''" >Add New User</button>
+        <button class="btn btn-block mt-4 mb-4" [disabled]="!userForm.form.valid" >Add New User</button>
     </form>
 </div>
 
