--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -60,7 +60,7 @@
                 email is not valid
             </div>
         </div>
-        <button class="btn btn-block mt-4 mb-4" [disabled]="!userForm.form.valid" >Add New User</button>
+        <button class="btn btn-success btn-block mt-4 mb-4" [disabled]="!userForm.form.valid" >Add New User</button>
     </form>
 </div>
 
