--- a/src/app/post-form/post-form.component.html
+++ b/src/app/post-form/post-form.component.html
@@ -4,12 +4,15 @@
 
         <div class="form-group">
             <label>Title :</label>
-            <input type="text" class="form-control" name="title" #title>
+            <input type="text" class="form-control" [(ngModel)]="currentPost.title" name="title">
         </div>
         <div class="form-group">
             <label>Body :</label>
-            <input type="text" class="form-control" name="body" #body>
+            <input type="text" class="form-control" name="body" [(ngModel)]="currentPost.body" >
         </div>
-        <button class="btn btn-dark btn-block" (click)="addPost(title.value,body.value)">Add Post</button>
+        <input type="hidden" name="id" [(ngModel)]="currentPost.id">
+
+        <button *ngIf="!isEdit" class="btn btn-dark btn-block" (click)="addPost(title.value,body.value)">Add Post</button>
+        <button *ngIf="isEdit" class="btn btn-warning btn-block" (click)="updatePost(title.value,body.value)"> Update</button>
     </form>
-</div>
+</div> 
