--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -3,5 +3,6 @@
 {{1+1}}
 <ul>
     <!-- <li>{{age}}</li> -->
-    <li>{{user.email}}</li>
+    <li>{{user.age}}</li>
+    <li>{{user.address?.street}}, {{user.address?.state}}</li>
 </ul>
