--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
 <div class="container">
-    <app-users></app-users>
+    <router-outlet></router-outlet>
+     <!-- <app-users></app-users> -->
 </div>
